# yt-analyzer

./: verify_extraction.py
backend/: .env.example  .gitignore  README.md  cli.py  deploy_lambda.sh  deploy_worker.sh  main.py  package_for_console.sh  pyproject.toml  requirements.txt  template.yaml  test_connections.py  worker.py
backend/src/: config.py  database.py  utils.py
backend/src/downloader/: video_downloader.py
backend/src/generator/: flashcard_generator.py  quiz_generator.py
backend/src/translator/: translator.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: LanguageSelector.jsx  TranscriptSidebar.jsx  YouTubeInput.jsx
frontend/src/config/: api.js
frontend/src/pages/: AuthCallback.jsx  Dashboard.jsx  Flashcards.jsx  Login.jsx  Quiz.jsx  Signup.jsx  Transcripts.jsx
frontend/src/services/: AuthService.js
notes/: architecture.md  backend.md  deployment-s3-cloudfront.md  deployment_summary.md  frontend.md  proxy_setup_guide.md  worker.md
