[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.41.2",
    "fastapi>=0.121.3",
    "deep-translator>=1.11.4",
    "anthropic>=0.18.1",
    "pymysql>=1.1.2",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "mangum>=0.17.0",
]

[project.optional-dependencies]
worker = [
    "ffmpeg-python>=0.2.0",
    "openai-whisper>=20250625",
    "yt-dlp>=2025.11.12",
    "langdetect>=1.0.9",
]


